--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
     "@nestjs/cqrs": "^6.1.0",
+    "@nestjs/mongoose": "^6.4.0",
     "@nestjs/platform-express": "^6.7.2",
+    "mongodb": "^3.5.5",
+    "mongoose": "^5.9.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3"
@@ -34,6 +37,7 @@
     "@nestjs/testing": "^6.7.1",
     "@types/express": "^4.17.1",
     "@types/jest": "^24.0.18",
+    "@types/mongoose": "^5.7.7",
     "@types/node": "^12.7.5",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
